@@ -1,8 +1,9 @@
 package by.koronatech.office.core.service.inpl;
 
-import by.koronatech.office.api.dto.GetDepartmentDTO;
-import by.koronatech.office.api.dto.GetEmployeeDTO;
+import by.koronatech.office.api.dto.DepartmentDTO;
+import by.koronatech.office.api.dto.EmployeeDTO;
 import by.koronatech.office.core.entity.Department;
+import by.koronatech.office.core.exception.DepartmentNotFoundException;
 import by.koronatech.office.core.mapper.DepartmentMapper;
 import by.koronatech.office.core.mapper.EmployeeMapper;
 import by.koronatech.office.core.service.DepartmentService;
@@ -11,13 +12,13 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class DepartmentServiceImpl implements DepartmentService {
-    private final List<Department> departments = new ArrayList<>();
-    private final EmployeeServiceImpl employeeService;
 
+    private final List<Department> departments = new ArrayList<>();
+
+    private final EmployeeServiceImpl employeeService;
 
     public DepartmentServiceImpl(EmployeeServiceImpl employeeService) {
         this.employeeService = employeeService;
@@ -35,25 +36,21 @@ public class DepartmentServiceImpl implements DepartmentService {
     }
 
     @Override
-    public List<GetDepartmentDTO> get() {
+    public List<DepartmentDTO> get() {
         return DepartmentMapper.toGetDepartmentDTOList(departments);
     }
 
     @Override
-    public List<GetEmployeeDTO> getEmployeesByDepartment(Integer departmentId) {
+    public List<EmployeeDTO> getEmployeesByDepartment(Integer departmentId) {
         String departmentName = departments.stream()
                 .filter(department -> department.getId().equals(departmentId))
                 .map(Department::getName)
                 .findFirst()
-                .orElse(null);
-
-        if (departmentName == null) {
-            return Collections.emptyList();
-        }
+                .orElseThrow(() -> new DepartmentNotFoundException(departmentId));
 
         return employeeService.getEmployees().stream()
                 .filter(employee -> employee.getDepartment().equals(departmentName))
                 .map(EmployeeMapper::toGetEmployeeDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
